Assets/scss/_custom.scss
// This file is empty within the template
// You can use it to override CSS from within your project

$btn-white-space: wrap;
.leaflet-heatmap-layer {
  opacity: 0.3;
}

ul{
  margin-bottom: 1rem
}

.toc, .bookmark{
  margin: 0 2px 40px;
  border: 1px solid $border-color;
  background: $border-color;
  border-radius: 10px;
  padding: 2em 3em 2em 0;
  color: #4c6c80;
}

.bookmark{

  border: 1px solid $primary-color;
  display: block;

  padding: 2em 1em !important
}

.toc a{
  color: #79accc
}
h2{
  padding-top: 0.6em;
  padding-bottom: 0.2em
}
h3{
  padding-top: 0.4em;
  padding-bottom: 0.2em
}
html{
  min-height: 100%;
}
header{
  padding: 3em 0;
  margin-left: -3em;  
}

img{
  max-width: 100%;
  margin: 1em 0;
}
.navbar-expand-lg{
  flex-flow: row wrap;
  overflow: wrap;

}
body {
  background-image: url(/images/bg.svg);
  background-repeat: repeat;
  background-position: 0 90%;
  background-size: cover;
  
  min-height:100vh;
}

footer{
  margin-bottom: -100vh;
}
.crosstalk-map {
  width: 100%;
  padding: 0;
  margin: 0;
}

label {
  display: inline;
}



.RHS {
  height: 100vh;
  margin: 0;
  padding: 0;
  top: 0;
}

.question {
  margin: 40px;
}



.text {
  margin-top: 2em;
}


#logo {
  width: 500px;
  display: flex;
  min-width: 100%;
}

#text {
  padding: 2em 0;
}

.navigation {
  padding: 2em 0;
}

#text-mobile {
  display: none;
}



.blog-item-wrapper{
  background-color: white;
  margin: 1em 0em;
  padding: 1em 1em;
  border-radius: 1em;
  border: 1px solid $primary-color;
}

.blog-post-title{
  padding: 0 !important;
  font-size: 2em;
  margin-top: 0.5em
}

.blog-cover-image{
  width: 100% !important;
  height: auto !important  ;
  object-fit: cover !important;
  border-radius: 10px;
  margin-bottom: 1em;
}

.active, .collapsible:hover {
  background-color: #555;
}

.content {
  padding: 0 12px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
  border-radius: 3%;
}

.textRight{
  min-height: 50vh;
}
//-----------------------
// mobile features
@media (max-width: 500px) {
  .toc ul{
    padding-left: 20px;
  }
  img{
    max-width: 85vw;
    max-height: 30vh;
  }
  //navigation 
  header{
    padding: 3em 0;
    margin-left: 0em;  
  }
  
  .navbar-expand-lg .navbar-nav .nav-link {
  padding: 15px;
  }
  
  .home{
    min-height: 100vh;
  }
  
  .blogHome{
  margin-top: 2em;
  padding: 2em 3em;
}
 
  #logo {
    min-width: 50%;
  }
  
  #container {
    min-height:100vh !important;
  }
  .textRight,
  .contact,
  #text-mobile {
    padding: 5em 3em;
  }
  #text {
    display: none;
  }

  #text-mobile {
    display: block;
  }

}
// desktop font-feature-settings
@media (min-width: 1020px) {
  .map-section {
    position: -webkit-sticky; /* Safari */
    position: sticky !important;
    top: 0;

    width: 100%;
    height: 100vh;
  }
  
  .blogHome,
  .textRight,
  .contact {
    margin-top: 30vh;
    padding-right: 25vh
  }
} ;

